--liquibase formatted sql

--changeset mtravnicek:1

    create table court (
        id bigint generated by default as identity,
        global_id uuid not null unique,
        name varchar(255) not null unique,
        deleted timestamp(6) with time zone,
        surface_id bigint not null,
        primary key (id)
    );

    comment on column court.deleted is
        'Soft-delete indicator';

    create table customer (
        id bigint generated by default as identity,
        global_id uuid not null unique,
        name varchar(255) not null,
        phone varchar(255) not null unique,
        deleted timestamp(6) with time zone,
        primary key (id)
    );

    comment on column customer.deleted is
        'Soft-delete indicator';

    create table game_type (
        id bigint generated by default as identity,
        name varchar(255) not null,
        price_multiplier float(24) not null,
        primary key (id)
    );

    create table reservation (
        id bigint generated by default as identity,
        global_id uuid not null unique,
        end_time timestamp(6) not null,
        start_time timestamp(6) not null,
        deleted timestamp(6) with time zone,
        court_id bigint not null,
        customer_id bigint not null,
        game_type_id bigint not null,
        primary key (id)
    );

    comment on column reservation.deleted is
        'Soft-delete indicator';

    create table surface (
        id bigint generated by default as identity,
        global_id uuid not null unique,
        name varchar(50) not null unique,
        price_per_minute bigint not null,
        deleted timestamp(6) with time zone,
        primary key (id)
    );

    comment on column surface.deleted is
        'Soft-delete indicator';

    alter table if exists court
       add constraint FKhm8dtei4oh99g9l1bdjxxstcd
       foreign key (surface_id)
       references surface;

    alter table if exists reservation
       add constraint FKpxnu37u6x3lp9jvebvujghn4e
       foreign key (court_id)
       references court;

    alter table if exists reservation
       add constraint FK41v6ueo0hiran65w8y1cta2c2
       foreign key (customer_id)
       references customer;

    alter table if exists reservation
       add constraint FKo6nt9e4tiqti680j3eyjv732c
       foreign key (game_type_id)
       references game_type;
